improve match pattern and add more unit tests