@@ -13,10 +13,10 @@ class CaseExprTest {
         var p = Expression.column("c").lt(1);
         var e = Expression.literal(2);
         var kase = CaseExpr.of(List.of(WhenThen.of(p, e)), e);
-        assertEquals(2, kase.whens().get(0).then().asLiteral().orElseThrow().value());
-        assertEquals(2, kase.elseExpr().asLiteral().orElseThrow().value());
+        assertEquals(2, kase.whens().getFirst().then().matchExpression().literal(l -> l.value()).orElse(null));
+        assertEquals(2, kase.elseExpr().matchExpression().literal(l -> l.value()).orElse(null));
         kase = CaseExpr.of(WhenThen.of(p, e));
-        assertEquals(2, kase.whens().get(0).then().asLiteral().orElseThrow().value());
+        assertEquals(2, kase.whens().getFirst().then().matchExpression().literal(l -> l.value()).orElse(null));
         assertNull(kase.elseExpr());
     }
 
@@ -25,8 +25,8 @@ class CaseExprTest {
         var p = Expression.column("c").lt(1);
         var e = Expression.literal(2);
         var kase = CaseExpr.of(List.of(WhenThen.of(p, e))).elseExpr(e);
-        assertEquals(2, kase.whens().get(0).then().asLiteral().orElseThrow().value());
-        assertEquals(2, kase.elseExpr().asLiteral().orElseThrow().value());
+        assertEquals(2, kase.whens().getFirst().then().matchExpression().literal(l -> l.value()).orElse(null));
+        assertEquals(2, kase.elseExpr().matchExpression().literal(l -> l.value()).orElse(null));
     }
 
     @Test
@@ -34,7 +34,7 @@ class CaseExprTest {
         var p = Expression.column("c").lt(1);
         var e = Expression.literal(2);
         var kase = CaseExpr.of(List.of(WhenThen.of(p, e))).elseValue(3);
-        assertEquals(2, kase.whens().get(0).then().asLiteral().orElseThrow().value());
-        assertEquals(3, kase.elseExpr().asLiteral().orElseThrow().value());
+        assertEquals(2, kase.whens().getFirst().then().matchExpression().literal(l -> l.value()).orElse(null));
+        assertEquals(3, kase.elseExpr().matchExpression().literal(l -> l.value()).orElse(null));
     }
 }
